// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index renders component 1`] = `
<Component
  className="root-mock"
>
  <WithStyles(Loading)
    message="Waiting for Zcash node..."
  />
</Component>
`;

exports[`Index renders when bootstrapping 1`] = `
<Component
  className="root-mock"
>
  <WithStyles(Loading)
    message="Launching node"
  />
</Component>
`;
